--- a/docs/css/website.css
+++ b/docs/css/website.css
@@ -548,7 +548,7 @@ a {
 }
 
 .w3-col.s1 {
-    width:8.33333%
+    width:2%
 }
 
 .w3-col.s2 {
@@ -564,7 +564,7 @@ a {
 }
 
 .w3-col.s5 {
-    width:41.66666%
+    width:49%
 }
 
 .w3-col.s6 {
@@ -1749,4 +1749,23 @@ body {
 
 .w3-half img:hover {
   opacity: 1
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.small-code {
+    font-size: 60%;
+    word-wrap: break-word;
 }
